# vnpy

./: .gitignore  GEMINI.md  README.md  pyproject.toml  requirements.txt
src/vnpy/: config.py
src/vnpy/agent/: engine.py
src/vnpy/app/data_manager/: __init__.py  engine.py
src/vnpy/app/data_recorder/: __init__.py  engine.py
src/vnpy/app/vnpy_datamanager/: base.py  engine.py
src/vnpy/event/: engine.py
src/vnpy/gateway/: __init__.py
src/vnpy/strategy/: engine.py  setting.py  strategy_config.json
src/vnpy/strategy/strategies/: macd_cross_strats.py
src/vnpy/trader/: database.py  engine.py  gateway.py  object.py  optimize.py  setting.py  utility.py
src/vnpy/utils/: atomic_json_writer.py  datetimes.py
tests/: backtest.py  backtest_test.ipynb  backtest_test_script.py  ftest.py  mimic_test.py  optimize_test_script.py
tests/adapters/: test_overview.py
tests/app/factor_maker/utils/: test_memory.py
tests/app/vnpy_datamanager/: test_vnpy_datamanager.py
tests/factor/: macd.py
tests/utils/: test_datetimes.py
vnpy/: __init__.py  config.py
vnpy/adapters/: base.py  dbs.py  files.py  overview.py
vnpy/agent/: TAIL_RISK_MANAGEMENT.md
vnpy/app/data_recorder/: __init__.py  engine.py
vnpy/app/vnpy_datamanager/: __init__.py  engine.py
vnpy/factor/: README.md  __init__.py  base.py  engine.py  engine_review.md  exceptions.py  factor_defination_setting.json  factor_maker_setting.json  factor_name.md  factor_settings.json  memory.py  optimizer.py  setting.py  template.py
vnpy/factor/backtesting/: MARKDOWN.md  backtesting.py  factor_analyzer.py  factor_calculator.py  factor_initializer.py  optimization.md  optimizer.py
vnpy/factor/docs/: factor_params.md  optimization.md
vnpy/factor/factors/: __init__.py  factor_defination_setting.json  factor_generatror.py  mimic_factors.py  my_factor_lib.py  my_factor_talib.py  setting_populator.py  talib_auto_gen_script.py
vnpy/factor/factors/ta-lib/: __init__.py
vnpy/factor/factors/ta-lib/cycle_indicators/: __init__.py  ht_dcperiod_factor.py  ht_dcphase_factor.py  ht_phasor_inphase_factor.py  ht_phasor_quadrature_factor.py  ht_sine_leadsine_factor.py  ht_sine_sine_factor.py  ht_trendmode_factor.py
vnpy/factor/factors/ta-lib/momentum_indicators/: __init__.py  adx_factor.py  adxr_factor.py  apo_factor.py  aroon_aroondown_factor.py  aroon_aroonup_factor.py  aroonosc_factor.py  bop_factor.py  cci_factor.py  cmo_factor.py  dx_factor.py  macd_macd_factor.py  macd_macdhist_factor.py  macd_macdsignal_factor.py  macdext_macd_factor.py  macdext_macdhist_factor.py  macdext_macdsignal_factor.py  macdfix_macd_factor.py  macdfix_macdhist_factor.py  macdfix_macdsignal_factor.py  mfi_factor.py  minus_di_factor.py  minus_dm_factor.py  mom_factor.py  plus_di_factor.py  plus_dm_factor.py  ppo_factor.py  roc_factor.py  rocp_factor.py  rocr100_factor.py  rocr_factor.py  rsi_factor.py  stoch_slowd_factor.py  stoch_slowk_factor.py  stochf_fastd_factor.py  stochf_fastk_factor.py  stochrsi_factor.py  trix_factor.py  ultosc_factor.py  willr_factor.py
vnpy/factor/factors/ta-lib/overlap_studies/: __init__.py  bbands_lowerband_factor.py  bbands_middleband_factor.py  bbands_upperband_factor.py  dema_factor.py  ema_factor.py  ht_trendline_factor.py  kama_factor.py  ma_factor.py  mama_fama_factor.py  mama_mama_factor.py  mavp_factor.py  midpoint_factor.py  midprice_factor.py  sar_factor.py  sarext_factor.py  sma_factor.py  t3_factor.py  tema_factor.py  trima_factor.py  wma_factor.py
vnpy/factor/factors/ta-lib/pattern_recognition/: __init__.py  cdl2crows_factor.py  cdl3blackcrows_factor.py  cdl3inside_factor.py  cdl3linestrike_factor.py  cdl3outside_factor.py  cdl3starsinsouth_factor.py  cdl3whitesoldiers_factor.py  cdlabandonedbaby_factor.py  cdladvanceblock_factor.py  cdlbelthold_factor.py  cdlbreakaway_factor.py  cdlclosingmarubozu_factor.py  cdlconcealbabyswall_factor.py  cdlcounterattack_factor.py  cdldarkcloudcover_factor.py  cdldoji_factor.py  cdldojistar_factor.py  cdldragonflydoji_factor.py  cdlengulfing_factor.py  cdleveningdojistar_factor.py  cdleveningstar_factor.py  cdlgapsidesidewhite_factor.py  cdlgravestonedoji_factor.py  cdlhammer_factor.py  cdlhangingman_factor.py  cdlharami_factor.py  cdlharamicross_factor.py  cdlhighwave_factor.py  cdlhikkake_factor.py  cdlhikkakemod_factor.py  cdlhomingpigeon_factor.py  cdlidentical3crows_factor.py  cdlinneck_factor.py  cdlinvertedhammer_factor.py  cdlkicking_factor.py  cdlkickingbylength_factor.py  cdlladderbottom_factor.py  cdllongleggeddoji_factor.py  cdllongline_factor.py  (+22 more)
vnpy/factor/factors/ta-lib/price_transform/: __init__.py  avgprice_factor.py  medprice_factor.py  typprice_factor.py  wclprice_factor.py
vnpy/factor/factors/ta-lib/statistic_functions/: __init__.py  beta_factor.py  correl_factor.py  linearreg_angle_factor.py  linearreg_factor.py  linearreg_intercept_factor.py  linearreg_slope_factor.py  stddev_factor.py  tsf_factor.py  var_factor.py
vnpy/factor/factors/ta-lib/uncategorized/: __init__.py  acos_factor.py  add_factor.py  asin_factor.py  atan_factor.py  ceil_factor.py  cos_factor.py  cosh_factor.py  div_factor.py  exp_factor.py  floor_factor.py  get_function_groups_factor.py  get_functions_factor.py  get_functions_output_struct_factor.py  ln_factor.py  log10_factor.py  max_factor.py  maxindex_factor.py  min_factor.py  minindex_factor.py  minmax_factor.py  minmaxindex_factor.py  mult_factor.py  (+9 more)
vnpy/factor/factors/ta_lib/: __init__.py
vnpy/factor/tests/: test_single_factor_engine.py
vnpy/factor/utils/: factor_generator.py  factor_utils.py  setting_populator.py  test.ipynb
vnpy/gateway/mimicgateway/: mimicgateway.py
vnpy/gateway/telegram/: telegram_gateway.py  tutorial.md
vnpy/strategy/: engine.py  strategy_config.json  template.py
vnpy/strategy/strategies/: __init__.py  ranked_factor_strategy.py
vnpy/trader/: database.py  engine.py  event.py  gateway.py  logger.py  object.py  setting.py  utility.py
vnpy/utils/: atomic_json_writer.py  atomic_writer_config.py  datetimes.py  error_handling.py  file_locking.py  graceful_shutdown.py  polars_utils.py
(+194 files in other folders)
