[project]
name = "vnpy"
version = "0.1.0"
description = "A comprehensive, modular, event-driven quantitative trading framework for strategy development, backtesting, and live trading across stocks, futures, and cryptocurrencies. Features a decoupled architecture, high extensibility, and easy integration of custom modules. Includes event-driven engines, gateways for multiple exchanges, advanced portfolio and risk management, high-performance factor engineering, and a robust strategy engine with automated model retraining. Designed for real-time, low-latency trading and research workflows."
readme = "README.md"
authors = [
    { name = "Ch1nZ", email = "chzao0928@gmail.com" }
]
requires-python = ">=3.9"
dependencies = [
    # Core Data Science Libraries
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scipy>=1.10.0",
    "scikit-learn>=1.2.0",
    "polars>=0.19.0",
    "pyarrow>=13.0.0",
    "joblib>=1.2.0",
    "dask>=2023.0.0",

    # Visualization & GUI
    "PySide6>=6.5.0",
    "pyqtgraph>=0.13.0",
    "plotly>=5.15.0",
    "qdarkstyle>=3.1.0",

    # Utilities & System
    "loguru>=0.7.0",
    "psutil>=5.9.0",
    "tqdm>=4.65.0",
    "requests>=2.31.0",
    "pyzmq>=25.0.0",
    "tzlocal>=5.0.0",
    "nbformat>=5.9.0",

    # Evolutionary Algorithms
    "deap>=1.4.0",

    # Testing, Linting, and Type Checking
    "pytest>=7.4.0",

    # Add any project-specific dependencies below
    # ...
]

[project.scripts]
vnpy = "vnpy:main"

[build-system]
requires = ["uv_build>=0.7.2,<0.8"]
build-backend = "uv_build"
